--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="content">
-      <div id="header-placeholder"></div>
+      <div id="header">
+        <h1>relativityparadox</h1>
+      </div>
       <h1>A cool website header</h1>
       <p>This is a text section below the fullscreen image with the header effect.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel eros nec leo dictum facilisis.</p>
